# myapp-api-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml  rustfmt.toml
.sqlx/: query-01bde8adc8a9f8f2fdcf2919dce073a636eba5875e8cb7c7d10f196a45644696.json  query-04eebd8330d87e6e5ae1ce1fe5e71aef1c471839a9420e25988ad770b50c734a.json  query-0636ca70c5cac4c1b432e0479d9305b3cc479cfb4abb1c429b4b627a77787168.json  query-063ca232f2cda249fdb447040ed83c2a3ece69e2235156c96b1992465ee0ecbe.json  query-093575fae7e103e8115c96f39d07bbcf4617e88e3db07de28d11a30f83bd9517.json  query-0942c4862cb6caeea946f0c9b164fd46e3d896d4d138f1828b50c9ffea99bf87.json  query-0adbbafae409505f0c8a5209017465cca653b8a47f17f1678e460461fd219208.json  query-0f1dfe8181608dbe5aaf0a8e20f44584f2c6b56186bf07582614c7e22e0727c4.json  query-17ec6a17a5cfb885ac1ca15ad8a564e94bb6d69fe268bad90dd99624dad8321e.json  query-2018227dc4cfafe09416dc52b21d9b5c43c8b26df75a256b54e17f352c079b89.json  query-245035b1baea1210f6762fcd8220a29fb5a828368ee6a3da285f3d246c768287.json  query-25fe3cf2a078a475de1935fffafa8726898ece084256f8c137edfc3ab140d74f.json  query-2b2054459ba75454e860c9d632ab145c6de4c24e98e58ac9dfc85bb0865414a2.json  query-2d0333f745f3843a81bb011c98eb7a2fd627f4a5ad833cd5642bbf0b46067de0.json  query-32c9c296dfc481779590ec8d9978bcac3bb5b0d22e372bf41a04de0dcec48472.json  query-37e350128bf1205f59ceef0cad6215ddfe8b3dee461c02e2e592a9e92102877f.json  query-4155c59d1cc1b3fd6f561656db00f942775f917e0556aef5ff5643f3536856d6.json  query-453cd247a03f1fdc3013da205fbb634393126b771dc4c486c23f00fc20ab8984.json  query-454739b771683f5b060916a42d5359d37f356b168a179225b86fa690f66572a9.json  query-45b7898b18955db1a857d85a250d2d0a53bc35c6499ee169aa4e47d6b56800fc.json  query-4605858af4c396e5a2e621a69d693d7c202018befddb01e1fb7af409595cb64a.json  (+89 more)
example/: examples_error_usage.rs
(+74 files in other folders)
