[package]
name = "myapp-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
  "chrono",
  "derive",
  "macros",
  "migrate",
  "postgres",
] }
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
regex = "1.11.1"
