[package]
name = "myapp-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono", "offline"] }
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
argon2 = "0.5.3"
rand = "0.8.5"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
http-body-util = "0.1.2"
tower = { version = "0.4", features = ["util"] }
mime = "0.3.17"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = true
